# opengl-leren

./: CMakeLists.txt  CMakePresets.json  build.sh  opengl-leren.sln  opengl-leren.vcxproj  opengl-leren.vcxproj.filters  prog.sh
.VSCodeCounter/2026-01-27_20-30-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: defines.h  log.h
include/gfx/: map.h  mesh.h  shader.h  texture.h  window.h
include/math/: math.h  matrix.h  vector.h
include/util/: io.h  log.h  util.h  vector.h
res/: fragment.glsl  quad.frag  quad.vert  test.txt  vertex.glsl
resources/shaders/: fragment.glsl  vertex.glsl
resources/shaders/basic/: fragment.glsl  vertex.glsl
src/: glad.c  main.c  main.cpp  state.h
src/game/level/: generator.c  generator.h
src/gfx/: camera.c  camera.h  map.c  mesh.c  quad.h  renderer.c  renderer.h  shader.c  shader.cpp  shader.h  sprite.h  window.c
src/gfx/camera/: camera.c  camera.h
src/gfx/core/: renderer.c  renderer.h  window.c  window.h
src/gfx/shader/: shader.c  shader.h
src/math/: linmath.c  linmath.h  matrix.c  matrix.h  vector.c
src/resources/shaders/: vertex.glsl
src/util/: defines.h  file.c  io.c  io.h  log.c  log.h  util.c  util.cpp  util.h  vector.c
src/util/core/: defines.h
src/util/io/: file.c
src/util/log/: log.c  log.h
